[package]
authors = ["Carl B"]
name = "Assignment_4"
version = "0.1.1"

[dependencies]
cortex-m = "0.3.0"
cortex-m-semihosting = "0.2.0"

[dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.3"

[dependencies.stm32f103xx]
features = ["rt"] # this feature indicates that the device crate will provide the vector table
version = "0.7.5"

[profile.release]
debug = true
lto = true
